--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="chat/chat.css">
-        <script src="chat/chatScript.js" defer></script>
         <script type="module" src="main.js"></script>
     </head>
     <body>
@@ -48,6 +47,6 @@
           
             </div>
         </section>
-        <button type="button" id="myButton">Click Me!</button> 
+        <button type="button" id="python-run-button">Run python!</button> 
     </body>
 </html>
