upload von Bilder anfang

--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
                         alt="avatar 3" style="width: 40px; height: 100%;">
                       <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1"
                         placeholder="Type message">
-                      <a class="ms-1 text-muted" href="#!"><i class="fas fa-paperclip"></i></a>
+                      <!-- Verstecktes Datei-Input -->
+                      <input name="datei" type="file" id="fileInput" accept="image/*" style="display: none;">
+
+                      <!-- Label als Button -->
+                      <label for="fileInput" class="ms-1 text-muted" style="cursor: pointer;">
+                        <i class="fas fa-paperclip"></i>
+                      </label>
+                      
                       <a class="ms-3 text-muted" href="#!"><i class="fas fa-smile"></i></a>
                       <a class="ms-3" href="#!" id="sendMessage"><i class="fas fa-paper-plane"></i></a>
                     </div>
