--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.38.0/min/vs/loader.min.js"></script>
     <link rel="stylesheet" href="chat/chat.css">
     <script type="module" src="main.js"></script>
 </head>
@@ -20,7 +21,9 @@
                         <h5 class="mb-0">Python-Code-Eingabe</h5>
                     </div>
                     <div class="card-body">
-                        <textarea class="form-control flex-grow-1" id="largeTextInput" rows="20" placeholder="Füge hier dein Python Code ein..."></textarea>
+                        <div class="card-footer p-3">
+                          <div id="monacoEditor" style="height: 400px; width: 100%;"></div>
+                        </div>
                         <button class="btn btn-primary mt-3" id="python-run-button">Run python!</button>
                         <button class="btn btn-primary mt-3" id="python-run-example-button">Run python example!</button>
                     </div>
