Up- und Download des Codes implementiert und examplebutten entfernt.

--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -24,8 +24,12 @@
                         <div class="card-footer p-3">
                           <div id="monacoEditor" style="height: 400px; width: 100%;"></div>
                         </div>
+                        <!-- Verstecktes Datei-Upload-Input -->
+                        <input type="file" id="uploadButton" accept=".py" style="display: none;">
+                        <!-- Sichtbarer Button im Bootstrap-Stil -->
+                        <button class="btn btn-primary mt-3" id="customUploadButton">Upload Python File</button>
+                        <button class="btn btn-primary mt-3" id="downloadButton">Download Code</button>
                         <button class="btn btn-primary mt-3" id="python-run-button">Run python!</button>
-                        <button class="btn btn-primary mt-3" id="python-run-example-button">Run python example!</button>
                     </div>
                 </div>
               </div>
