--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -27,9 +27,9 @@
                         <!-- Verstecktes Datei-Upload-Input -->
                         <input type="file" id="uploadButton" accept=".py" style="display: none;">
                         <!-- Sichtbarer Button im Bootstrap-Stil -->
-                        <button class="btn btn-primary mt-3" id="customUploadButton">Upload Python File</button>
-                        <button class="btn btn-primary mt-3" id="downloadButton">Download Code</button>
-                        <button class="btn btn-primary mt-3" id="python-run-button">Run python!</button>
+                        <button class="btn btn-primary mt-3" id="customUploadCodeButton">Upload Python File</button>
+                        <button class="btn btn-primary mt-3" id="downloadCodeButton">Download Code</button>
+                        <button class="btn btn-primary mt-3" id="pythonRunButton">Run python!</button>
                     </div>
                 </div>
               </div>
