--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -30,7 +30,8 @@
                         <!-- Sichtbarer Button im Bootstrap-Stil -->
                         <button class="btn btn-primary mt-3" id="customUploadCodeButton">Upload Python File</button>
                         <button class="btn btn-primary mt-3" id="downloadCodeButton">Download Code</button>
-                        <button class="btn btn-primary mt-3" id="pythonRunButton">Run python!</button>
+                        <button class="btn btn-primary mt-3" id="pythonRunButton">Run python</button>
+                        <button class="btn btn-primary mt-3" id="stopCodeButton">Stop python</button>
                     </div>
                 </div>
               </div>
