--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -1,17 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pyodide Worker Runner</title>
-</head>
-<body>
-  <h1>Pyodide Worker Runner Demo</h1>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -57,19 +44,8 @@
                       <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3">
                         <div id="status-display" style="width: 40px; height: 100%;">
                             <img id="await-symbol" src="chat/chat_img/await_input.png" alt="awaiting input" style="width: 40px; height: 100%; display: none;">
-                            <div id="loading-symbol" style="display: none;">
-                                <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="width: 40px; height: 40px;">
-                                    <circle cx="50" cy="50" r="45" stroke-width="10" stroke="#ccc" fill="none" stroke-dasharray="283" stroke-dashoffset="75">
-                                        <animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="1s" repeatCount="indefinite" />
-                                    </circle>
-                                </svg>
-                            </div>
-                            <div id="ready-symbol" style="display: none;">
-                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="width: 40px; height: 40px;">
-                                    <circle cx="12" cy="12" r="10" fill="#4caf50" />
-                                    <path d="M9 12l2 2 4-4" stroke="#fff" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                            </div>
+                            <div id="loading-symbol" style="display: none;" class="loading-symbol"></div>
+                            <div id="ready-symbol" style="display: none;" class="ready-symbol"></div>
                         </div>                        
                           <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="Type message">
                           <input name="datei" type="file" id="fileInput" accept="image/*" style="display: none;">
