--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -35,10 +35,10 @@
                 <!-- Rechte Spalte: Chat -->
                 <div class="col-md-4 col-lg-5">
                   <div class="card" id="chatWindow">
-                      <div class="card-header d-flex justify-content-between align-items-center p-3">
+                      <div class="card-header">
                           <h5 class="mb-0">Chat</h5>
                       </div>
-                      <div class="card-body" data-mdb-perfect-scrollbar-init style="position: relative; height: calc(100vh - 175px)" id="chat">
+                      <div class="card-body" data-mdb-perfect-scrollbar-init style="position: relative; height: calc(100vh - 160px)" id="chat">
                           <div id="chat-container"></div>
                       </div>
                       <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3">
