Tabellen eingabe übernommen

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -48,7 +48,7 @@
                             <img id="ready-symbol" src="src/chat/chat_img/ready.png" alt="ready" style="width: 40px; height: 100%; display: none;">
                         </div>                        
                           <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="Type message">
-                          <input name="datei" type="file" id="fileInput" accept="image/*" style="display: none;">
+                          <input name="datei" type="file" id="fileInput" style="display: none;">
                           <label for="fileInput" class="ms-1 text-muted" style="cursor: pointer;">
                               <i class="fas fa-paperclip"></i>
                           </label>
