--- a/Chat_Demo/documentation.html
+++ b/Chat_Demo/documentation.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Befehlsdokumentation</title>
+  <title>Command documentation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -30,23 +30,35 @@
   </style>
 </head>
 <body>
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+    <h1>Command documentation</h1>
 
-  <h1>Befehlsdokumentation</h1>
-
+    <a href="index.html" style="
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    ">
+      ⬅ Back to Chat-with-Python
+    </a>
+  </div>
   <section>
     <h2><code>inputImg(Promt:string) -> Pillow Image</code></h2>
-    <p>Mit dem Befehl <code>inputImg</code> kannst du den Nutzer deines Programmes nach einem Bild fragen. Wenn du im Chat dann ein Bild hochlädst wird dieses dann in ein <code>Pillow Image</code> Objekt umgewandelt was du im weiteren verlauf verwendet kannst. Mit <code>.show()</code> kannst du dir das Bild im Chat anzeigen lassen.
-    <p>Beispielverwendung:</p>
-    <pre><code>img = inputImg("Übergib ein Bild")  # fragt nach einem Bild
- img.show()                          # zeigt das Bild im Chat an</code></pre>
+    <p>With the command <code>inputImg</code> you can ask the user of your program for an image. If you then upload an image in the chat, it will be converted into a Pillow Image object which you can use in the further course. With <code>.show()</code> you can display the image in the chat.</p>
+    <p>Example usage:</p>
+    <pre><code>img = inputImg("Submit a picture")  # asks for a picture
+ img.show()                          # displays the picture in the chat</code></pre>
   </section>
 
   <section>
     <h2><code>inputTable(Promt:string) -> pandas.dataframe</code></h2>
-    <p>Mit dem Befehl <code>inputTable</code> kannst du den Nutzer deines Programmes nach einer Tabelle fragen. Wenn du im Chat dann ein Tabelle hochlädst wird dieses dann in ein <code>pandas Dataframe</code> Objekt umgewandelt was du im weiteren verlauf verwendet kannst. Mit <code>print([name deines Dataframes])</code> kannst du dir die Tabelle im Chat anzeigen lassen.
-    <p>Beispielverwendung:</p>
-    <pre><code>df = inputTable("Übergib ein Tabelle")  # fragt nach einer Tabelle
- print(df)                               # zeigt die Tabelle im Chat an</code></pre>
+    <p>With the command <code>inputTable</code> you can ask the user of your program for a table. If you upload a table in the chat, it will be converted into a pandas dataframe object which you can use in the further course. With <code>print([name of your dataframe])</code> you can display the table in the chat. </p>
+    <p>Example usage:</p>
+    <pre><code>df = inputTable("Submit a table")  # asks for a table
+ print(df)                          # displays the table in the chat</code></pre>
     </section>
 
 </body>
