--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Python-Chat</title>
+    <title>Chat-With-Python</title>
     <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="/src/chat/chat.css">
     <link rel="stylesheet" href="/src/style.css">
@@ -16,7 +16,7 @@
               <div class="col-md-8 col-lg-7">
                 <div class="card">
                     <div class="card-header uniform-header" style="display: flex; justify-content: space-between; align-items: center;">
-                        <h5 class="mb-0">Python-Code-Eingabe</h5>
+                        <h5 class="mb-0">Python-Code-Editor</h5>
                         <a href="documentation.html" target="_blank" style="
                           padding: 8px 10px;
                           background-color: #007BFF;
@@ -24,7 +24,7 @@
                           text-decoration: none;
                           border-radius: 4px;
                           font-weight: bold;">
-                          📄 Zur Befehlsdokumentation
+                          📄 command documentation
                         </a>
                       </div>
                     <div class="card-body">
