package.tar.gz verschoben und vite.config angepasst

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -17,7 +17,7 @@
                 <div class="card">
                     <div class="card-header uniform-header" style="display: flex; justify-content: space-between; align-items: center;">
                         <h5 class="mb-0">Python-Code-Editor</h5>
-                        <a href="documentation.html" target="_blank" style="
+                        <a href="./documentation.html" target="_blank" style="
                           padding: 8px 10px;
                           background-color: #007BFF;
                           color: white;
