beispiele in ein zip file gebündelt und button zum herunterladen hinzugefügt

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -38,6 +38,7 @@
                         <button class="btn btn-primary mt-3" id="downloadCodeButton">Download Code</button>
                         <button class="btn btn-primary mt-3" id="pythonRunButton">Run python</button>
                         <button class="btn btn-primary mt-3" id="stopCodeButton">Stop python</button>
+                        <button class="btn btn-secondary mt-3" id="downloadExamples">Download Examples</button>
                     </div>
                 </div>
               </div>
