Monaco editor durch Codemirror ausgetauscht

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -29,7 +29,7 @@
                       </div>
                     <div class="card-body">
                         <div class="card-footer p-3">
-                          <div id="monacoEditor" style="height: calc(100vh - 220px); width: 100%;"></div>
+                        <div id="codeMirrorEditor" style="height: calc(100vh - 220px); width: 100%;"></div>
                         </div>
                         <!-- Verstecktes Datei-Upload-Input -->
                         <input type="file" id="uploadCodeButton" accept=".py" style="display: none;">
