verschiebung von Dateien

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -63,9 +63,9 @@
                       </div>
                       <div class="card-footer text-muted d-flex justify-content-start align-items-center p-3">
                         <div id="status-display" style="width: 40px; height: 100%;">
-                            <img id="await-symbol" src="src/chat/chat_img/await_input.png" alt="awaiting input" style="width: 40px; height: 100%; display: none;">
-                            <img id="loading-symbol" src="src/chat/chat_img/loading.png" alt="loading" style="width: 40px; height: 100%; display: none;">
-                            <img id="ready-symbol" src="src/chat/chat_img/ready.png" alt="ready" style="width: 40px; height: 100%; display: none;">
+                            <img id="await-symbol" src="src/Icons/await_input.png" alt="awaiting input" style="width: 40px; height: 100%; display: none;">
+                            <img id="loading-symbol" src="src/Icons/loading.png" alt="loading" style="width: 40px; height: 100%; display: none;">
+                            <img id="ready-symbol" src="src/Icons/ready.png" alt="ready" style="width: 40px; height: 100%; display: none;">
                         </div>                        
                           <input type="text" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="Type message">
                           <a class="ms-1" href="#!" id="sendMessage"><i class="fas fa-paper-plane"></i></a>
