output flush in my_show anpassung der beispiele und Quellen

--- a/Chat_Demo/index.html
+++ b/Chat_Demo/index.html
@@ -53,7 +53,7 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <li><a class="dropdown-item" href="#" >caesar cipher</a></li>
-                                <li><a class="dropdown-item" href="#" >endangerd speciec</a></li>
+                                <li><a class="dropdown-item" href="#" >endangered species</a></li>
                                 <li><a class="dropdown-item" href="#" >InputText</a></li>
                                 <li><a class="dropdown-item" href="#" >InputCsv</a></li>
                                 <li><a class="dropdown-item" href="#" >InputImg</a></li>
